--- a/TKV2024.htm
+++ b/TKV2024.htm
@@ -6,7 +6,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="TKV2024_files/filelist.xml">
@@ -49,35 +49,35 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=29;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "PO&#344;ADÍ";
- c_rgszSh[1] = "PO&#344;ADÍ-HS";
- c_rgszSh[2] = "PO&#344;ADÍ-DO";
- c_rgszSh[3] = "VÍT&#282;ZOVÉ";
- c_rgszSh[4] = "VÍT&#282;ZOVÉ-DO";
- c_rgszSh[5] = "VÍT&#282;ZOVÉ-HS";
+ c_rgszSh[0] = "PO&#344;ADÃ";
+ c_rgszSh[1] = "PO&#344;ADÃ-HS";
+ c_rgszSh[2] = "PO&#344;ADÃ-DO";
+ c_rgszSh[3] = "VÃT&#282;ZOVÃ‰";
+ c_rgszSh[4] = "VÃT&#282;ZOVÃ‰-DO";
+ c_rgszSh[5] = "VÃT&#282;ZOVÃ‰-HS";
  c_rgszSh[6] = "DEMLOVKA";
  c_rgszSh[7] = "DEMLOVKA-HS";
  c_rgszSh[8] = "DEMLOVKA-DO";
  c_rgszSh[9] = "P&#344;IBYSLAV";
  c_rgszSh[10] = "P&#344;IBYSLAV-HS";
  c_rgszSh[11] = "P&#344;IBYSLAV-DO";
- c_rgszSh[12] = "U DEJVA";
- c_rgszSh[13] = "U DEJVA-HS";
- c_rgszSh[14] = "U DEJVA-DO";
- c_rgszSh[15] = "KOVÁRNA";
- c_rgszSh[16] = "KOVÁRNA-HS";
- c_rgszSh[17] = "KOVÁRNA-DO";
+ c_rgszSh[12] = "UÂ DEJVA";
+ c_rgszSh[13] = "UÂ DEJVA-HS";
+ c_rgszSh[14] = "UÂ DEJVA-DO";
+ c_rgszSh[15] = "KOVÃRNA";
+ c_rgszSh[16] = "KOVÃRNA-HS";
+ c_rgszSh[17] = "KOVÃRNA-DO";
  c_rgszSh[18] = "TAJFUN";
  c_rgszSh[19] = "TAJFUN-HS";
  c_rgszSh[20] = "TAJFUN-DO";
- c_rgszSh[21] = "ZAPOMN&#282;NÍ";
- c_rgszSh[22] = "ZAPOMN&#282;NÍ-HS";
- c_rgszSh[23] = "ZAPOMN&#282;NÍ-DO";
+ c_rgszSh[21] = "ZAPOMN&#282;NÃ";
+ c_rgszSh[22] = "ZAPOMN&#282;NÃ-HS";
+ c_rgszSh[23] = "ZAPOMN&#282;NÃ-DO";
  c_rgszSh[24] = "MADEIRA";
  c_rgszSh[25] = "MADEIRA-HS";
  c_rgszSh[26] = "MADEIRA-DO";
- c_rgszSh[27] = "ÚVODNÍ-DO";
- c_rgszSh[28] = "ÚVODNÍ-HS";
+ c_rgszSh[27] = "ÃšVODNÃ-DO";
+ c_rgszSh[28] = "ÃšVODNÃ-HS";
 
 
 
@@ -355,27 +355,27 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ</x:Name>
+    <x:Name>PO&#344;ADÃ</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ-HS</x:Name>
+    <x:Name>PO&#344;ADÃ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet002.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO&#344;ADÍ-DO</x:Name>
+    <x:Name>PO&#344;ADÃ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet003.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ</x:Name>
+    <x:Name>VÃT&#282;ZOVÃ‰</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet004.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ-DO</x:Name>
+    <x:Name>VÃT&#282;ZOVÃ‰-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet005.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>VÍT&#282;ZOVÉ-HS</x:Name>
+    <x:Name>VÃT&#282;ZOVÃ‰-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet006.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -415,15 +415,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2024_files/sheet015.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA</x:Name>
+    <x:Name>KOVÃRNA</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet016.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA-HS</x:Name>
+    <x:Name>KOVÃRNA-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet017.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOVÁRNA-DO</x:Name>
+    <x:Name>KOVÃRNA-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet018.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -439,15 +439,15 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2024_files/sheet021.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ</x:Name>
+    <x:Name>ZAPOMN&#282;NÃ</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet022.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ-HS</x:Name>
+    <x:Name>ZAPOMN&#282;NÃ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet023.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ZAPOMN&#282;NÍ-DO</x:Name>
+    <x:Name>ZAPOMN&#282;NÃ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet024.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
@@ -463,11 +463,11 @@ function fnSetActiveSheet(iSh)
     <x:WorksheetSource HRef="TKV2024_files/sheet027.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ÚVODNÍ-DO</x:Name>
+    <x:Name>ÃšVODNÃ-DO</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet028.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>ÚVODNÍ-HS</x:Name>
+    <x:Name>ÃšVODNÃ-HS</x:Name>
     <x:WorksheetSource HRef="TKV2024_files/sheet029.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
